--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,18 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9451a23f",
+   "id": "8681561f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "from openpyxl import Workbook\n",
     "\n",
     "# Helper function to convert month numbers to names\n",
     "def month_number_to_name(month):\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "# Helper function to get the last three months\n",
+    "# Helper function to determine the last three months\n",
     "def get_last_three_months(current_month, current_year):\n",
     "    months = []\n",
     "    for i in range(3):\n",
@@ -23,171 +24,145 @@
     "        months.append((month, year))\n",
     "    return months\n",
     "\n",
-    "# Function to process MoM data\n",
-    "def process_mom_data(sheet, sheet_name, current_month, current_year):\n",
+    "# Function to handle pasting data for MoM type\n",
+    "def process_mom_data(sheet, sheet_name, current_month, current_year, data):\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "    mom_data = []\n",
-    "\n",
+    "    \n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "\n",
+    "        \n",
     "        for month_num, year in last_three_months:\n",
-    "            month_col = f\"M{month_num:02d} {year}\"\n",
+    "            month_col = f\"M{month_num:02d} {year}\"  # Format month column name\n",
+    "            \n",
     "            if month_col in sheet.columns:\n",
-    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
-    "                if 'DC' in sheet_name.upper():\n",
-    "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
-    "                elif 'HC' in sheet_name.upper():\n",
-    "                    mom_data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "                if 'DC' in sheet_name:\n",
+    "                    data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
+    "                elif 'HC' in sheet_name:\n",
+    "                    data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "\n",
-    "    return pd.DataFrame(mom_data)\n",
-    "\n",
-    "# Function to process YTD data\n",
-    "def process_ytd_data(sheet, sheet_name, current_month, current_year):\n",
-    "    ytd_data = []\n",
-    "\n",
+    "# Function to calculate YTD data\n",
+    "def process_ytd_data(sheet, sheet_name, current_month, current_year, data):\n",
     "    for index, row in sheet.iterrows():\n",
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
+    "        \n",
+    "        ytd_value = sum(row[f'M{month:02d} {current_year}' for month in range(1, current_month + 1) if f'M{month:02d} {current_year}' in sheet.columns], 0)\n",
     "\n",
-    "        total_ytd = sum(row[f\"M{month:02d} {current_year}\"] for month in range(1, current_month + 1) if f\"M{month:02d} {current_year}\" in sheet.columns)\n",
+    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"  # Current Month-Year\n",
+    "        if 'DC' in sheet_name:\n",
+    "            data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
+    "        elif 'HC' in sheet_name:\n",
+    "            data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
     "\n",
-    "        if total_ytd:\n",
-    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "            if 'DC' in sheet_name.upper():\n",
-    "                ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, total_ytd, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name.upper():\n",
-    "                ytd_data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', total_ytd, '', '', '', entity, function, '', mica])\n",
+    "# Function for Prior Year FY and YTD\n",
+    "def process_prior_year_data(sheet, sheet_name, current_year, data):\n",
+    "    prior_year = current_year - 1\n",
+    "    \n",
+    "    # For Prior Year FY\n",
+    "    fy_col = f'FY {prior_year}'\n",
+    "    if fy_col in sheet.columns:\n",
+    "        for index, row in sheet.iterrows():\n",
+    "            entity = row.get('Entity', '')\n",
+    "            function = row.get('RTN Level 4', '')\n",
+    "            mica = row.get('Account', '')\n",
+    "            fy_value = row[fy_col]\n",
+    "            period_value = f\"Dec-{str(prior_year)[-2:]}\"\n",
+    "            if 'DC' in sheet_name:\n",
+    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, fy_value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name:\n",
+    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', fy_value, '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    # For Prior Year YTD\n",
+    "    ytd_col = f'YTD {prior_year}'\n",
+    "    if ytd_col in sheet.columns:\n",
+    "        for index, row in sheet.iterrows():\n",
+    "            entity = row.get('Entity', '')\n",
+    "            function = row.get('RTN Level 4', '')\n",
+    "            mica = row.get('Account', '')\n",
+    "            ytd_value = row[ytd_col]\n",
+    "            period_value = f\"{month_number_to_name(current_month)}-{str(prior_year)[-2:]}\"\n",
+    "            if 'DC' in sheet_name:\n",
+    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
+    "            elif 'HC' in sheet_name:\n",
+    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
     "\n",
-    "    return pd.DataFrame(ytd_data)\n",
-    "\n",
-    "# Function to process Prior Year FY data\n",
-    "def process_prior_year_fy_data(sheet, sheet_name, current_year):\n",
-    "    prior_year_fy_data = []\n",
-    "    prior_year_fy_col = f\"FY {current_year - 1}\"\n",
-    "\n",
-    "    if prior_year_fy_col not in sheet.columns:\n",
-    "        return pd.DataFrame()\n",
-    "\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "\n",
-    "        if not pd.isna(row[prior_year_fy_col]):\n",
-    "            period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
-    "            if 'DC' in sheet_name.upper():\n",
-    "                prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, row[prior_year_fy_col], '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name.upper():\n",
-    "                prior_year_fy_data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', row[prior_year_fy_col], '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "    return pd.DataFrame(prior_year_fy_data)\n",
-    "\n",
-    "# Function to process Prior Year YTD data\n",
-    "def process_prior_year_ytd_data(sheet, sheet_name, current_month, current_year):\n",
-    "    prior_year_ytd_data = []\n",
-    "\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "\n",
-    "        total_prior_year_ytd = sum(row[f\"YTD{month:02d} {current_year - 1}\"] for month in range(1, current_month + 1) if f\"YTD{month:02d} {current_year - 1}\" in sheet.columns)\n",
-    "\n",
-    "        if total_prior_year_ytd:\n",
-    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
-    "            if 'DC' in sheet_name.upper():\n",
-    "                prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, total_prior_year_ytd, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name.upper():\n",
-    "                prior_year_ytd_data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', total_prior_year_ytd, '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "    return pd.DataFrame(prior_year_ytd_data)\n",
-    "\n",
-    "# Function to process All FY data\n",
-    "def process_all_fy_data(sheet, sheet_name, current_year):\n",
-    "    all_fy_data = []\n",
-    "\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "\n",
-    "        fy_col = f\"FY {current_year}\"\n",
-    "        if fy_col in sheet.columns and not pd.isna(row[fy_col]):\n",
-    "            period_value = f\"Dec-{str(current_year)[-2:]}\"\n",
-    "            if 'DC' in sheet_name.upper():\n",
-    "                all_fy_data.append([sheet_name, '', '', '', '', '', 'All FY', period_value, row[fy_col], '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name.upper():\n",
-    "                all_fy_data.append([sheet_name, '', '', '', '', '', 'All FY', period_value, '', row[fy_col], '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "    return pd.DataFrame(all_fy_data)\n",
-    "\n",
-    "# Function to process All YTD data\n",
-    "def process_all_ytd_data(sheet, sheet_name, current_month, current_year):\n",
-    "    all_ytd_data = []\n",
-    "\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "\n",
-    "        total_all_ytd = sum(row[f\"M{month:02d} {current_year}\"] for month in range(1, current_month + 1) if f\"M{month:02d} {current_year}\" in sheet.columns)\n",
-    "\n",
-    "        if total_all_ytd:\n",
-    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "            if 'DC' in sheet_name.upper():\n",
-    "                all_ytd_data.append([sheet_name, '', '', '', '', '', 'All YTD', period_value, total_all_ytd, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name.upper():\n",
-    "                all_ytd_data.append([sheet_name, '', '', '', '', '', 'All YTD', period_value, '', total_all_ytd, '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "    return pd.DataFrame(all_ytd_data)\n",
-    "\n",
-    "# Main function to process the workbook\n",
-    "def process_workbook(processed_file_path, current_month, current_year):\n",
-    "    xls = pd.ExcelFile(processed_file_path)\n",
-    "\n",
-    "    # Create a new workbook and the \"Paste\" sheet\n",
-    "    wb = Workbook()\n",
-    "    ws = wb.active\n",
-    "    ws.title = \"Paste\"\n",
-    "\n",
-    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
-    "    ws.append(headers)\n",
-    "\n",
-    "    final_df = pd.DataFrame()\n",
-    "\n",
-    "    for sheet_name in xls.sheet_names:\n",
-    "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "\n",
-    "        # Check for relevant data and append\n",
-    "        if 'ACTUAL' in sheet_name.upper():\n",
-    "            final_df = pd.concat([final_df, process_mom_data(sheet, sheet_name, current_month, current_year)])\n",
-    "            final_df = pd.concat([final_df, process_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
-    "\n",
-    "        if 'DC' in sheet_name.upper() or 'HC' in sheet_name.upper():\n",
-    "            final_df = pd.concat([final_df, process_prior_year_fy_data(sheet, sheet_name, current_year)])\n",
-    "            final_df = pd.concat([final_df, process_prior_year_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
-    "            final_df = pd.concat([final_df, process_all_fy_data(sheet, sheet_name, current_year)])\n",
-    "            final_df = pd.concat([final_df, process_all_ytd_data(sheet, sheet_name, current_month, current_year)])\n",
-    "\n",
-    "    for row in final_df.itertuples(index=False):\n",
-    "        ws.append(row)\n",
-    "\n",
-    "    wb.save('final_output_file.xlsx')\n",
+    "# Function to process FY Target and FY Forecast\n",
+    "def process_fy_data(sheet, sheet_name, current_year, data):\n",
+    "    fy_col = f'FY {current_year}'\n",
+    "    if 'Target' in sheet_name:\n",
+    "        if fy_col in sheet.columns:\n",
+    "            for index, row in sheet.iterrows():\n",
+    "                entity = row.get('Entity', '')\n",
+    "                function = row.get('RTN Level 4', '')\n",
+    "                mica = row.get('Account', '')\n",
+    "                fy_value = row[fy_col]\n",
+    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"  # Current Month-Year\n",
+    "                if 'DC' in sheet_name:\n",
+    "                    data.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, fy_value, '', '', '', '', entity, function, '', mica])\n",
+    "                elif 'HC' in sheet_name:\n",
+    "                    data.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, '', fy_value, '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    if 'Fcst' in sheet_name:\n",
+    "        if fy_col in sheet.columns:\n",
+    "            for index, row in sheet.iterrows():\n",
+    "                entity = row.get('Entity', '')\n",
+    "                function = row.get('RTN Level 4', '')\n",
+    "                mica = row.get('Account', '')\n",
+    "                fy_value = row[fy_col]\n",
+    "                period_value = f\"Dec-{str(current_year)[-2:]}\"  # December of current year\n",
+    "                if 'DC' in sheet_name:\n",
+    "                    data.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, fy_value, '', '', '', '', entity, function, '', mica])\n",
+    "                elif 'HC' in sheet_name:\n",
+    "                    data.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, '', fy_value, '', '', '', entity, function, '', mica])\n",
     "\n",
     "# Example usage\n",
     "current_month = 1  # For January\n",
     "current_year = 2025\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
     "\n",
-    "process_workbook(processed_file_path, current_month, current_year)\n",
-    "print(\"done\")"
+    "# Load the processed file\n",
+    "xls = pd.ExcelFile(processed_file_path)\n",
+    "\n",
+    "# Create a new workbook and the \"Paste\" sheet\n",
+    "wb = Workbook()\n",
+    "ws = wb.active\n",
+    "ws.title = \"Paste\"\n",
+    "\n",
+    "# Define headers\n",
+    "headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "           \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "ws.append(headers)\n",
+    "\n",
+    "data = []\n",
+    "\n",
+    "# Loop through sheets and apply processing for MoM, YTD, and FY\n",
+    "for sheet_name in xls.sheet_names:\n",
+    "    sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "\n",
+    "    if 'Actual' in sheet_name:  # MoM\n",
+    "        process_mom_data(sheet, sheet_name, current_month, current_year, data)\n",
+    "        process_ytd_data(sheet, sheet_name, current_month, current_year, data)\n",
+    "    \n",
+    "    if 'Target' in sheet_name:  # FY Target\n",
+    "        process_fy_data(sheet, sheet_name, current_year, data)\n",
+    "    \n",
+    "    if 'Fcst' in sheet_name:  # FY Forecast\n",
+    "        process_fy_data(sheet, sheet_name, current_year, data)\n",
+    "    \n",
+    "    process_prior_year_data(sheet, sheet_name, current_year, data)\n",
+    "\n",
+    "# Write collected data to the Paste sheet\n",
+    "for row in data:\n",
+    "    ws.append(row)\n",
+    "\n",
+    "# Save the final workbook\n",
+    "wb.save('final_output_file.xlsx')\n"
    ]
   },
   {
@@ -341,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290b3bfc",
+   "id": "c14ff712",
    "metadata": {},
    "outputs": [],
    "source": [
