--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8681561f",
+   "id": "a3a3b7e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "        months.append((month, year))\n",
     "    return months\n",
     "\n",
-    "# Function to handle pasting data for MoM type\n",
+    "# Function to process MoM data\n",
     "def process_mom_data(sheet, sheet_name, current_month, current_year, data):\n",
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
     "    \n",
@@ -32,12 +32,11 @@
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "        \n",
+    "\n",
     "        for month_num, year in last_three_months:\n",
-    "            month_col = f\"M{month_num:02d} {year}\"  # Format month column name\n",
-    "            \n",
+    "            month_col = f\"M{month_num:02d} {year}\"\n",
     "            if month_col in sheet.columns:\n",
-    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
     "                if 'DC' in sheet_name:\n",
     "                    data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
     "                elif 'HC' in sheet_name:\n",
@@ -49,90 +48,61 @@
     "        entity = row.get('Entity', '')\n",
     "        function = row.get('RTN Level 4', '')\n",
     "        mica = row.get('Account', '')\n",
-    "        \n",
-    "        ytd_value = sum(row[f'M{month:02d} {current_year}' for month in range(1, current_month + 1) if f'M{month:02d} {current_year}' in sheet.columns], 0)\n",
     "\n",
-    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"  # Current Month-Year\n",
+    "        # Calculate YTD value\n",
+    "        ytd_value = sum(\n",
+    "            row[f'M{month:02d} {current_year}'] for month in range(1, current_month + 1)\n",
+    "            if f'M{month:02d} {current_year}' in sheet.columns\n",
+    "        )\n",
+    "        \n",
+    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
     "        if 'DC' in sheet_name:\n",
     "            data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
     "        elif 'HC' in sheet_name:\n",
     "            data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
     "\n",
-    "# Function for Prior Year FY and YTD\n",
-    "def process_prior_year_data(sheet, sheet_name, current_year, data):\n",
+    "# Function to process Prior Year FY data\n",
+    "def process_prior_year_fy_data(sheet, current_year, data):\n",
     "    prior_year = current_year - 1\n",
+    "    fy_col = f\"FY {prior_year}\"\n",
     "    \n",
-    "    # For Prior Year FY\n",
-    "    fy_col = f'FY {prior_year}'\n",
-    "    if fy_col in sheet.columns:\n",
-    "        for index, row in sheet.iterrows():\n",
+    "    for index, row in sheet.iterrows():\n",
+    "        if fy_col in sheet.columns:\n",
     "            entity = row.get('Entity', '')\n",
     "            function = row.get('RTN Level 4', '')\n",
     "            mica = row.get('Account', '')\n",
-    "            fy_value = row[fy_col]\n",
-    "            period_value = f\"Dec-{str(prior_year)[-2:]}\"\n",
     "            if 'DC' in sheet_name:\n",
-    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, fy_value, '', '', '', '', entity, function, '', mica])\n",
+    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', '', row[fy_col], '', '', '', '', entity, function, '', mica])\n",
     "            elif 'HC' in sheet_name:\n",
-    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, '', fy_value, '', '', '', entity, function, '', mica])\n",
-    "    \n",
-    "    # For Prior Year YTD\n",
-    "    ytd_col = f'YTD {prior_year}'\n",
-    "    if ytd_col in sheet.columns:\n",
-    "        for index, row in sheet.iterrows():\n",
-    "            entity = row.get('Entity', '')\n",
-    "            function = row.get('RTN Level 4', '')\n",
-    "            mica = row.get('Account', '')\n",
-    "            ytd_value = row[ytd_col]\n",
-    "            period_value = f\"{month_number_to_name(current_month)}-{str(prior_year)[-2:]}\"\n",
-    "            if 'DC' in sheet_name:\n",
-    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name:\n",
-    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
+    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', '', '', row[fy_col], '', '', '', entity, function, '', mica])\n",
     "\n",
-    "# Function to process FY Target and FY Forecast\n",
-    "def process_fy_data(sheet, sheet_name, current_year, data):\n",
-    "    fy_col = f'FY {current_year}'\n",
-    "    if 'Target' in sheet_name:\n",
-    "        if fy_col in sheet.columns:\n",
-    "            for index, row in sheet.iterrows():\n",
-    "                entity = row.get('Entity', '')\n",
-    "                function = row.get('RTN Level 4', '')\n",
-    "                mica = row.get('Account', '')\n",
-    "                fy_value = row[fy_col]\n",
-    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"  # Current Month-Year\n",
-    "                if 'DC' in sheet_name:\n",
-    "                    data.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, fy_value, '', '', '', '', entity, function, '', mica])\n",
-    "                elif 'HC' in sheet_name:\n",
-    "                    data.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, '', fy_value, '', '', '', entity, function, '', mica])\n",
-    "    \n",
-    "    if 'Fcst' in sheet_name:\n",
-    "        if fy_col in sheet.columns:\n",
-    "            for index, row in sheet.iterrows():\n",
-    "                entity = row.get('Entity', '')\n",
-    "                function = row.get('RTN Level 4', '')\n",
-    "                mica = row.get('Account', '')\n",
-    "                fy_value = row[fy_col]\n",
-    "                period_value = f\"Dec-{str(current_year)[-2:]}\"  # December of current year\n",
-    "                if 'DC' in sheet_name:\n",
-    "                    data.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, fy_value, '', '', '', '', entity, function, '', mica])\n",
-    "                elif 'HC' in sheet_name:\n",
-    "                    data.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, '', fy_value, '', '', '', entity, function, '', mica])\n",
+    "# Function to process Prior Year YTD data\n",
+    "def process_prior_year_ytd_data(sheet, current_month, current_year, data):\n",
+    "    prior_year = current_year - 1\n",
+    "    ytd_value = sum(\n",
+    "        row[f'M{month:02d} {prior_year}'] for month in range(1, current_month + 1)\n",
+    "        if f'M{month:02d} {prior_year}' in sheet.columns\n",
+    "    )\n",
     "\n",
-    "# Example usage\n",
-    "current_month = 1  # For January\n",
+    "    period_value = f\"{month_number_to_name(current_month)}-{str(prior_year)[-2:]}\"\n",
+    "    entity = row.get('Entity', '')\n",
+    "    function = row.get('RTN Level 4', '')\n",
+    "    mica = row.get('Account', '')\n",
+    "    \n",
+    "    if 'DC' in sheet_name:\n",
+    "        data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
+    "    elif 'HC' in sheet_name:\n",
+    "        data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
+    "\n",
+    "# Setup\n",
+    "current_month = 1  # Example: January\n",
     "current_year = 2025\n",
-    "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
+    "processed_file_path = 'Processed_file.xlsx'\n",
     "\n",
-    "# Load the processed file\n",
     "xls = pd.ExcelFile(processed_file_path)\n",
-    "\n",
-    "# Create a new workbook and the \"Paste\" sheet\n",
     "wb = Workbook()\n",
     "ws = wb.active\n",
     "ws.title = \"Paste\"\n",
-    "\n",
-    "# Define headers\n",
     "headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
     "           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
     "           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
@@ -141,23 +111,27 @@
     "\n",
     "data = []\n",
     "\n",
-    "# Loop through sheets and apply processing for MoM, YTD, and FY\n",
+    "# Process sheets\n",
     "for sheet_name in xls.sheet_names:\n",
     "    sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "\n",
-    "    if 'Actual' in sheet_name:  # MoM\n",
+    "    \n",
+    "    # Process MoM\n",
+    "    if 'Actual' in sheet_name:\n",
     "        process_mom_data(sheet, sheet_name, current_month, current_year, data)\n",
+    "    \n",
+    "    # Process YTD\n",
+    "    if 'YTD' in sheet_name:\n",
     "        process_ytd_data(sheet, sheet_name, current_month, current_year, data)\n",
-    "    \n",
-    "    if 'Target' in sheet_name:  # FY Target\n",
-    "        process_fy_data(sheet, sheet_name, current_year, data)\n",
-    "    \n",
-    "    if 'Fcst' in sheet_name:  # FY Forecast\n",
-    "        process_fy_data(sheet, sheet_name, current_year, data)\n",
-    "    \n",
-    "    process_prior_year_data(sheet, sheet_name, current_year, data)\n",
     "\n",
-    "# Write collected data to the Paste sheet\n",
+    "    # Process Prior Year FY\n",
+    "    if 'FY' in sheet_name:\n",
+    "        process_prior_year_fy_data(sheet, current_year, data)\n",
+    "\n",
+    "    # Process Prior Year YTD\n",
+    "    if 'YTD' in sheet_name:\n",
+    "        process_prior_year_ytd_data(sheet, current_month, current_year, data)\n",
+    "\n",
+    "# Write final data to the worksheet\n",
     "for row in data:\n",
     "    ws.append(row)\n",
     "\n",
@@ -316,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14ff712",
+   "id": "f1078875",
    "metadata": {},
    "outputs": [],
    "source": [
