--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -8,135 +8,47 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re\n",
-    "from openpyxl import Workbook\n",
     "\n",
-    "# Helper function to convert month numbers to names\n",
-    "def month_number_to_name(month):\n",
-    "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
+    "# Load the Paste sheet and the mapping sheet\n",
+    "paste_df = pd.read_excel('Paste_file.xlsx', sheet_name='Paste')  # Your paste sheet\n",
+    "mapping_df = pd.read_excel('Mapping_file.xlsx')  # Your mapping sheet\n",
     "\n",
-    "# Helper function to determine the last three months\n",
-    "def get_last_three_months(current_month, current_year):\n",
-    "    months = []\n",
-    "    for i in range(3):\n",
-    "        month = (current_month - i - 1) % 12 + 1\n",
-    "        year = current_year if current_month - i > 0 else current_year - 1\n",
-    "        months.append((month, year))\n",
-    "    return months\n",
+    "# Create a dictionary to hold dataframes grouped by Function Code\n",
+    "rtn_data = {}\n",
     "\n",
-    "# Function to process MoM data\n",
-    "def process_mom_data(sheet, sheet_name, current_month, current_year, data):\n",
-    "    last_three_months = get_last_three_months(current_month, current_year)\n",
+    "# Get the unique list of Function Codes\n",
+    "unique_function_codes = paste_df['Function'].unique()\n",
+    "\n",
+    "# Create a dictionary where keys are Function Codes and values are dataframes with matching rows\n",
+    "for function_code in unique_function_codes:\n",
+    "    rtn_data[function_code] = paste_df[paste_df['Function'] == function_code]\n",
+    "\n",
+    "# Iterate through each function code and add File Name based on RTN\n",
+    "for function_code, df in rtn_data.items():\n",
+    "    # Get the RTN values for the current function code\n",
+    "    rtn_values = df['RTN Level 4'].unique()\n",
     "    \n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "\n",
-    "        for month_num, year in last_three_months:\n",
-    "            month_col = f\"M{month_num:02d} {year}\"\n",
-    "            if month_col in sheet.columns:\n",
-    "                period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
-    "                if 'DC' in sheet_name:\n",
-    "                    data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
-    "                elif 'HC' in sheet_name:\n",
-    "                    data.append([sheet_name, '', '', '', '', '', 'MoM', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "# Function to calculate YTD data\n",
-    "def process_ytd_data(sheet, sheet_name, current_month, current_year, data):\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        entity = row.get('Entity', '')\n",
-    "        function = row.get('RTN Level 4', '')\n",
-    "        mica = row.get('Account', '')\n",
-    "\n",
-    "        # Calculate YTD value\n",
-    "        ytd_value = sum(\n",
-    "            row[f'M{month:02d} {current_year}'] for month in range(1, current_month + 1)\n",
-    "            if f'M{month:02d} {current_year}' in sheet.columns\n",
-    "        )\n",
+    "    # Match RTN from mapping_df with RTN in the current dataframe\n",
+    "    for rtn in rtn_values:\n",
+    "        # Fetch the corresponding File Name from the mapping sheet\n",
+    "        file_name = mapping_df.loc[mapping_df['RTN'] == rtn, 'File Name'].values\n",
     "        \n",
-    "        period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "        if 'DC' in sheet_name:\n",
-    "            data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
-    "        elif 'HC' in sheet_name:\n",
-    "            data.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "# Function to process Prior Year FY data\n",
-    "def process_prior_year_fy_data(sheet, current_year, data):\n",
-    "    prior_year = current_year - 1\n",
-    "    fy_col = f\"FY {prior_year}\"\n",
+    "        # Check if there's a match for the RTN\n",
+    "        if len(file_name) > 0:\n",
+    "            # Add the File Name to all matching rows in the current dataframe\n",
+    "            df['File Name'] = file_name[0]\n",
+    "        else:\n",
+    "            # If no match, assign 'Unknown' or keep blank\n",
+    "            df['File Name'] = 'Unknown'\n",
     "    \n",
-    "    for index, row in sheet.iterrows():\n",
-    "        if fy_col in sheet.columns:\n",
-    "            entity = row.get('Entity', '')\n",
-    "            function = row.get('RTN Level 4', '')\n",
-    "            mica = row.get('Account', '')\n",
-    "            if 'DC' in sheet_name:\n",
-    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', '', row[fy_col], '', '', '', '', entity, function, '', mica])\n",
-    "            elif 'HC' in sheet_name:\n",
-    "                data.append([sheet_name, '', '', '', '', '', 'Prior Year FY', '', '', row[fy_col], '', '', '', entity, function, '', mica])\n",
+    "    # Replace the updated dataframe back into the dictionary\n",
+    "    rtn_data[function_code] = df\n",
     "\n",
-    "# Function to process Prior Year YTD data\n",
-    "def process_prior_year_ytd_data(sheet, current_month, current_year, data):\n",
-    "    prior_year = current_year - 1\n",
-    "    ytd_value = sum(\n",
-    "        row[f'M{month:02d} {prior_year}'] for month in range(1, current_month + 1)\n",
-    "        if f'M{month:02d} {prior_year}' in sheet.columns\n",
-    "    )\n",
+    "# Now concatenate all the dataframes in rtn_data back into a single dataframe\n",
+    "final_df = pd.concat(rtn_data.values(), ignore_index=True)\n",
     "\n",
-    "    period_value = f\"{month_number_to_name(current_month)}-{str(prior_year)[-2:]}\"\n",
-    "    entity = row.get('Entity', '')\n",
-    "    function = row.get('RTN Level 4', '')\n",
-    "    mica = row.get('Account', '')\n",
-    "    \n",
-    "    if 'DC' in sheet_name:\n",
-    "        data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, ytd_value, '', '', '', '', entity, function, '', mica])\n",
-    "    elif 'HC' in sheet_name:\n",
-    "        data.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, '', ytd_value, '', '', '', entity, function, '', mica])\n",
-    "\n",
-    "# Setup\n",
-    "current_month = 1  # Example: January\n",
-    "current_year = 2025\n",
-    "processed_file_path = 'Processed_file.xlsx'\n",
-    "\n",
-    "xls = pd.ExcelFile(processed_file_path)\n",
-    "wb = Workbook()\n",
-    "ws = wb.active\n",
-    "ws.title = \"Paste\"\n",
-    "headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
-    "           \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
-    "           \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
-    "           \"Function\", \"Mapped Country\", \"MICA\"]\n",
-    "ws.append(headers)\n",
-    "\n",
-    "data = []\n",
-    "\n",
-    "# Process sheets\n",
-    "for sheet_name in xls.sheet_names:\n",
-    "    sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "    \n",
-    "    # Process MoM\n",
-    "    if 'Actual' in sheet_name:\n",
-    "        process_mom_data(sheet, sheet_name, current_month, current_year, data)\n",
-    "    \n",
-    "    # Process YTD\n",
-    "    if 'YTD' in sheet_name:\n",
-    "        process_ytd_data(sheet, sheet_name, current_month, current_year, data)\n",
-    "\n",
-    "    # Process Prior Year FY\n",
-    "    if 'FY' in sheet_name:\n",
-    "        process_prior_year_fy_data(sheet, current_year, data)\n",
-    "\n",
-    "    # Process Prior Year YTD\n",
-    "    if 'YTD' in sheet_name:\n",
-    "        process_prior_year_ytd_data(sheet, current_month, current_year, data)\n",
-    "\n",
-    "# Write final data to the worksheet\n",
-    "for row in data:\n",
-    "    ws.append(row)\n",
-    "\n",
-    "# Save the final workbook\n",
-    "wb.save('final_output_file.xlsx')\n"
+    "# Write the final dataframe back to the Paste sheet\n",
+    "final_df.to_excel('Final_Paste_file.xlsx', index=False)\n"
    ]
   },
   {
